<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" 
    android:background="#FFFFFC" >

    <EditText
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:id="@+id/etTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etAmountHint" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/tvHowMuchTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTransactionAmount"
        android:layout_alignLeft="@+id/etTransactionAmount"
        android:layout_marginTop="40dp"
        android:text="@string/tvTip" />

    <TextView
        android:id="@+id/tvHowManyPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTransactionAmount"
        android:layout_alignRight="@+id/etTransactionAmount"
        android:layout_marginTop="40dp"
        android:text="@string/tvPeople" />

    <NumberPicker
        android:id="@+id/npTipPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHowMuchTip"
        android:layout_alignLeft="@+id/etTransactionAmount"
        android:layout_marginTop="10dp" />

    <NumberPicker
        android:id="@+id/npUserPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHowManyPeople"
        android:layout_alignRight="@+id/etTransactionAmount"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTransactionAmount"
        android:layout_below="@+id/npTipPicker"
        android:layout_marginTop="30dp"
        android:text="@string/tvTipIs"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTransactionAmount"
        android:layout_below="@+id/npUserPicker"
        android:layout_alignBottom="@+id/tvTipLabel"
        android:layout_toRightOf="@+id/npTipPicker"
        android:layout_marginLeft="5dp"
        android:gravity="left|bottom"
  		android:layout_gravity="right"
        android:text="@string/tvTipValue"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/cbSaveValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTipLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/cbSaveDefaultValues" />

</RelativeLayout>